<resources>

    <string name="app_name">Cedar App</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_listof_rides">ListofRides</string>
    <string name="blue_streak">Blue Streak</string>
    <string name="cedar_creek_mine">Cedar Creek Mine Ride</string>
    <string name="calypso">Calypso</string>
    <string name="cedar_downs">Cedar Racing Derby</string>
    <string name="corkscrew">Corkscrew</string>
    <string name="dodgem">Dodgem</string>
    <string name="gemini">Gemini</string>
    <string name="iron_dragon">Iron Dragon</string>
    <string name="junior_gemini">Jr. Gemini</string>
    <string name="magnum_xl200">Magnum XL-200</string>
    <string name="mantis">Mantis</string>
    <string name="matterhorn">Matterhorn</string>
    <string name="maverick">Maverick</string>
    <string name="maxair">MaXair</string>
    <string name="mean_streak">Mean Streak</string>
    <string name="millenium_force">Millenium Force</string>
    <string name="monster">Monster</string>
    <string name="ocean_motion">Ocean Motion</string>
    <string name="power_tower">Power Tower</string>
    <string name="raptor">Raptor</string>
    <string name="scrambler">Scrambler</string>
    <string name="skyhawk">Skyhawk</string>
    <string name="super_himalaya">Super Himalaya</string>
    <string name="top_thrill">Top Thrill Dragster</string>
    <string name="troika">Troika</string>
    <string name="wave_swinger">Wave Swinger</string>
    <string name="wicked_twister">Wicked Twister</string>
    <string name="wind_seeker">WindSeeker</string>
    <string name="witches_wheel">Witches\' Wheel</string>
    <string name="woodstock_express">Woodstock Express</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <string name="shoot_the_rapids">Shoot the Rapids</string>
    <string name="snake_river_falls">Snake River Falls</string>
    <string name="thunder_canyon">Thunder Canyon</string>
    <string name="button_map">View Map</string>
    <string name="title_activity_display_map">Map</string>
    <string name="map_description">Map of Cedar Point</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ride_details">Ride Details</string>

</resources>